modificacion de pantallas y eliminacion de Container20 en formularios

--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/index.xhtml
@@ -54,15 +54,15 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel value="Usuario: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel value="Usuario: " class=" Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
-                        <p:outputLabel  value="Tipo de Usuario: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Tipo de Usuario: " class=" Responsive"></p:outputLabel>
                         <p:selectOneMenu>
                             <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
                             <f:selectItem itemValue="1" itemLabel="Docente"></f:selectItem>
                             <f:selectItem itemValue="2" itemLabel="Alumno"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel  value="Nombre: " class=" Container20 Responsive" ></p:outputLabel>
+                        <p:outputLabel  value="Nombre: " class=" Responsive" ></p:outputLabel>
                         <p:selectOneMenu  filter="true" filterMatchMode="contains">
                             <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo300}"></f:selectItem>
                             <f:selectItem itemValue="1" itemLabel="Carmen"></f:selectItem>
@@ -70,9 +70,9 @@
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Contraseña: " class="  Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Contraseña: " class="  Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
-                        <p:outputLabel  value="Repetir Contraseña: " class="  Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Repetir Contraseña: " class="  Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
@@ -100,15 +100,15 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel value="Usuario: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel value="Usuario: " class=" Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
-                        <p:outputLabel  value="Tipo de Usuario: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Tipo de Usuario: " class=" Responsive"></p:outputLabel>
                         <p:selectOneMenu>
                             <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
                             <f:selectItem itemValue="1" itemLabel="Docente"></f:selectItem>
                             <f:selectItem itemValue="2" itemLabel="Alumno"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel  value="Nombre: " class=" Container20 Responsive" ></p:outputLabel>
+                        <p:outputLabel  value="Nombre: " class=" Responsive" ></p:outputLabel>
                         <p:selectOneMenu  filter="true" filterMatchMode="contains">
                             <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo300}"></f:selectItem>
                             <f:selectItem itemValue="1" itemLabel="Carmen"></f:selectItem>
@@ -116,9 +116,9 @@
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Contraseña: " class="  Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Contraseña: " class="  Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
-                        <p:outputLabel  value="Repetir Contraseña: " class="  Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Repetir Contraseña: " class="  Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
