--- a/SIENI/SIENI-web/src/main/webapp/view/formato/administracionSistema/gestionUsuarios/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/administracionSistema/gestionUsuarios/index.xhtml
@@ -51,15 +51,15 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="usuario" value="Usuario: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="usuario" value="Usuario: " class=" Responsive"></p:outputLabel>
                         <p:inputText id="usuario"></p:inputText>
-                        <p:outputLabel for="tipoUsuario" value="Tipo de Usuario: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="tipoUsuario" value="Tipo de Usuario: " class=" Responsive"></p:outputLabel>
                         <p:selectOneMenu id="tipoUsuario">
                             <f:selectItem itemLabel="Administrador"></f:selectItem>
                             <f:selectItem itemLabel="Docente"></f:selectItem>
                             <f:selectItem itemLabel="Alumno"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel for="nombreExpediente" value="Nombre: " class=" Container20 Responsive" ></p:outputLabel>
+                        <p:outputLabel for="nombreExpediente" value="Nombre: " class=" Responsive" ></p:outputLabel>
                         <p:selectOneMenu id="nombreExpediente" filter="true" filterMatchMode="contains">
                             <f:selectItem itemLabel="Jose"></f:selectItem>
                             <f:selectItem itemLabel="Carmen"></f:selectItem>
@@ -67,9 +67,9 @@
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="contrasenia1" value="Contraseña: " class="  Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="contrasenia1" value="Contraseña: " class="  Responsive"></p:outputLabel>
                         <p:password id="contrasenia1" value=""  feedback="true" inline="true" autocomplete="false" promptLabel="Ingrese una Contraseña" goodLabel="Media" strongLabel="Alta" weakLabel="Baja" ></p:password>                    
-                        <p:outputLabel for="contrasenia2" value="Repetir Contraseña: " class="  Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="contrasenia2" value="Repetir Contraseña: " class="  Responsive"></p:outputLabel>
                         <p:password id="contrasenia2" value="" match="contrasenia2"></p:password>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
@@ -97,15 +97,15 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="m_usuario" value="Usuario: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="m_usuario" value="Usuario: " class=" Responsive"></p:outputLabel>
                         <p:inputText id="m_usuario"></p:inputText>
-                        <p:outputLabel for="m_tipoUsuario" value="Tipo de Usuario: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="m_tipoUsuario" value="Tipo de Usuario: " class=" Responsive"></p:outputLabel>
                         <p:selectOneMenu id="m_tipoUsuario">
                             <f:selectItem itemLabel="Administrador"></f:selectItem>
                             <f:selectItem itemLabel="Docente"></f:selectItem>
                             <f:selectItem itemLabel="Alumno"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel for="m_nombreExpediente" value="Nombre: " class=" Container20 Responsive" ></p:outputLabel>
+                        <p:outputLabel for="m_nombreExpediente" value="Nombre: " class=" Responsive" ></p:outputLabel>
                         <p:selectOneMenu id="m_nombreExpediente" filter="true" filterMatchMode="contains">
                             <f:selectItem itemLabel="Jose"></f:selectItem>
                             <f:selectItem itemLabel="Carmen"></f:selectItem>
@@ -113,9 +113,9 @@
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="m_contrasenia1" value="Contraseña: " class="  Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="m_contrasenia1" value="Contraseña: " class="  Responsive"></p:outputLabel>
                         <p:password id="m_contrasenia1" value=""  feedback="true" inline="true" autocomplete="false"  promptLabel="Ingrese una Contraseña" goodLabel="Media" strongLabel="Alta" weakLabel="Baja" ></p:password>                    
-                        <p:outputLabel for="m_contrasenia2" value="Repetir Contraseña: " class="  Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="m_contrasenia2" value="Repetir Contraseña: " class="  Responsive"></p:outputLabel>
                         <p:password id="m_contrasenia2" value="" match="m_contrasenia1"></p:password>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
