--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionAnioEscolar/matricula/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionAnioEscolar/matricula/index.xhtml
@@ -53,21 +53,21 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>                    
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="carnet" value="Carnet: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="carnet" value="Carnet: " class=" Responsive"></p:outputLabel>
                         <p:inputText id="carnet"></p:inputText>
-                        <p:outputLabel for="nombreExp" value="Nombre: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="nombreExp" value="Nombre: " class=" Responsive"></p:outputLabel>
                         <p:selectOneMenu id="nombreExp" filter="true" filterMatchMode="contains">
                             <f:selectItem itemLabel="Mauricio Amilcar"></f:selectItem>
                             <f:selectItem itemLabel="Rafael Antonio"></f:selectItem>
                             <f:selectItem itemLabel="Alberto Daniel"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel for="grado" value="Grado: " class=" Container20 Responsive" ></p:outputLabel>
+                        <p:outputLabel for="grado" value="Grado: " class=" Responsive" ></p:outputLabel>
                         <p:selectOneMenu id="grado" filter="true" filterMatchMode="contains">
                             <f:selectItem itemLabel="7°"></f:selectItem>
                             <f:selectItem itemLabel="8°"></f:selectItem>
                             <f:selectItem itemLabel="9°"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel for="seccion" value="Sección del grado: " class="  Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="seccion" value="Sección del grado: " class="  Responsive"></p:outputLabel>
                         <p:selectOneMenu id="seccion">
                             <f:selectItem itemLabel="A"></f:selectItem>
                             <f:selectItem itemLabel="B"></f:selectItem>
@@ -99,21 +99,21 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="m_carnet" value="Carnet: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="m_carnet" value="Carnet: " class=" Responsive"></p:outputLabel>
                         <p:inputText id="m_carnet"></p:inputText>
-                        <p:outputLabel for="m_nombreExp" value="Nombre: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="m_nombreExp" value="Nombre: " class=" Responsive"></p:outputLabel>
                         <p:selectOneMenu id="m_nombreExp" filter="true" filterMatchMode="contains">
                             <f:selectItem itemLabel="Mauricio Amilcar"></f:selectItem>
                             <f:selectItem itemLabel="Rafael Antonio"></f:selectItem>
                             <f:selectItem itemLabel="Alberto Daniel"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel for="m_grado" value="Grado: " class=" Container20 Responsive" ></p:outputLabel>
+                        <p:outputLabel for="m_grado" value="Grado: " class=" Responsive" ></p:outputLabel>
                         <p:selectOneMenu id="m_grado" filter="true" filterMatchMode="contains">
                             <f:selectItem itemLabel="7°"></f:selectItem>
                             <f:selectItem itemLabel="8°"></f:selectItem>
                             <f:selectItem itemLabel="9°"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel for="m_seccion" value="Sección del grado: " class="  Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="m_seccion" value="Sección del grado: " class="  Responsive"></p:outputLabel>
                         <p:selectOneMenu id="m_seccion">
                             <f:selectItem itemLabel="A"></f:selectItem>
                             <f:selectItem itemLabel="B"></f:selectItem>
