--- a/SIENI/SIENI-web/src/main/webapp/view/formato/respuestas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/respuestas/index.xhtml
@@ -41,18 +41,18 @@
             <p:tab title="Registro de respuesta" >
                 <h:form>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="titulo" value="Titulo de Pregunta: " class=" Container20 Responsive"></p:outputLabel>
+                    <p:outputLabel for="titulo" value="Titulo de Pregunta: " class=" Responsive"></p:outputLabel>
                     <p:inputText  id="titulo" value="XX--100--XX"></p:inputText>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="curso" value="Curso: " class=" Container20 Responsive"></p:outputLabel>
-                    <p:selectOneMenu tabindex="1" id="curso" class=" Container20 Responsive">
+                    <p:outputLabel for="curso" value="Curso: " class=" Responsive"></p:outputLabel>
+                    <p:selectOneMenu tabindex="1" id="curso" class=" Responsive">
                         <f:selectItem itemValue="0" itemLabel="XX--100--XX"/>
                         <f:selectItem itemValue="0" itemLabel="Matemáticas"/>
                         <f:selectItem itemValue ="1" itemLabel="Ciencias Naturales"/>
                         <f:selectItem itemValue="2" itemLabel="Sociales"/>
                     </p:selectOneMenu>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="consulta" value="Consulta: " class=" Container20 Responsive"></p:outputLabel>
+                    <p:outputLabel for="consulta" value="Consulta: " class=" Responsive"></p:outputLabel>
                     <p:inputTextarea value="XX--200--XX" id="consulta"></p:inputTextarea>
                     <div class="EmptyBox20"></div>
                     <p:commandButton value="Guardar"/>
