--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/index.xhtml
@@ -54,22 +54,22 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Nombre: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Nombre: " class=" Responsive"></p:outputLabel>
                         <p:inputText value="#{formatoPantallas.campo100}"></p:inputText>
-                        <p:outputLabel  value="Estado: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{archivosMultimediaForm.estado}">
+                        <p:outputLabel  value="Estado: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{archivosMultimediaForm.estado}">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue="0" itemLabel="No Disponible"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Tipo: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="tipo" class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel  value="Tipo: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="tipo" class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue ="1" itemLabel="Video"/>
                             <f:selectItem itemValue ="2" itemLabel="Imagen"/>
                         </p:selectOneMenu>
-                        <p:outputLabel  value="Archivo: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Archivo: " class=" Responsive"></p:outputLabel>
                         <p:fileUpload label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
                         </p:fileUpload>  
                     </p:panelGrid>
@@ -98,22 +98,22 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Nombre: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Nombre: " class=" Responsive"></p:outputLabel>
                         <p:inputText value="#{formatoPantallas.campo100}"></p:inputText>
-                        <p:outputLabel  value="Estado: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{archivosMultimediaForm.estado}">
+                        <p:outputLabel  value="Estado: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{archivosMultimediaForm.estado}">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue="0" itemLabel="No Disponible"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Tipo: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="tipo" class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel  value="Tipo: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="tipo" class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue ="1" itemLabel="Video"/>
                             <f:selectItem itemValue ="2" itemLabel="Imagen"/>
                         </p:selectOneMenu>
-                        <p:outputLabel  value="Archivo: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Archivo: " class=" Responsive"></p:outputLabel>
                         <p:fileUpload label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
                         </p:fileUpload>  
                     </p:panelGrid>
