--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/ejerciciosResueltos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/ejerciciosResueltos/index.xhtml
@@ -44,7 +44,7 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel  value="Algebra " class="  Container20 Responsive"></p:outputLabel>  
+                    <p:outputLabel  value="Algebra " class="  Responsive"></p:outputLabel>  
                     <div class="EmptyBox20"></div>
 
                     <h:graphicImage name="ejerResuelto.png" styleClass="Fleft" library="images" />
