--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/index.xhtml
@@ -72,7 +72,7 @@
                         <p:selectOneMenu>
                             <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo30}"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel  value="Archivo: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Archivo: " class=" Responsive"></p:outputLabel>
                         <p:fileUpload label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
                         </p:fileUpload>
                         <p:outputLabel value="Estado: " class="Responsive"></p:outputLabel>
@@ -106,7 +106,7 @@
                         <p:selectOneMenu>
                             <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo30}"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel  value="Archivo: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Archivo: " class=" Responsive"></p:outputLabel>
                         <p:fileUpload label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
                         </p:fileUpload>
                         <p:outputLabel value="Estado: " class="Responsive"></p:outputLabel>
