--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/index.xhtml
@@ -56,22 +56,22 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Nombre: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:inputText class=" Container20 Responsive" value="#{formatoPantallas.campo100}"></p:inputText>
-                        <p:outputLabel value="Estado: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{formatoPantallas.campo15}">
+                        <p:outputLabel  value="Nombre: " class=" Responsive"></p:outputLabel>
+                        <p:inputText class=" Responsive" value="#{formatoPantallas.campo100}"></p:inputText>
+                        <p:outputLabel value="Estado: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{formatoPantallas.campo15}">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue="0" itemLabel="No Disponible"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Coordinador: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{formatoPantallas.campo300}">
+                        <p:outputLabel  value="Coordinador: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{formatoPantallas.campo300}">
                             <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo300} "/>
                             <f:selectItem itemValue ="1" itemLabel="Carlos"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="Turno: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu class=" Container20 Responsive" value="#{formatoPantallas.campo15}">
+                        <p:outputLabel value="Turno: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu class=" Responsive" value="#{formatoPantallas.campo15}">
                             <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue ="1" itemLabel="Vespertino"/>
                         </p:selectOneMenu>   
@@ -100,22 +100,22 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Nombre: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:inputText class=" Container20 Responsive" value="#{formatoPantallas.campo100}"></p:inputText>
-                        <p:outputLabel value="Estado: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{formatoPantallas.campo15}">
+                        <p:outputLabel  value="Nombre: " class=" Responsive"></p:outputLabel>
+                        <p:inputText class=" Responsive" value="#{formatoPantallas.campo100}"></p:inputText>
+                        <p:outputLabel value="Estado: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{formatoPantallas.campo15}">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue="0" itemLabel="No Disponible"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Coordinador: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{formatoPantallas.campo300}">
+                        <p:outputLabel  value="Coordinador: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{formatoPantallas.campo300}">
                             <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo300} "/>
                             <f:selectItem itemValue ="1" itemLabel="Carlos"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="Turno: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu class=" Container20 Responsive" value="#{formatoPantallas.campo15}">
+                        <p:outputLabel value="Turno: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu class=" Responsive" value="#{formatoPantallas.campo15}">
                             <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue ="1" itemLabel="Vespertino"/>
                         </p:selectOneMenu>   
