--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionNotas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionNotas/index.xhtml
@@ -59,27 +59,27 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Alumno: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{archivosMultimediaForm.estado}">
+                        <p:outputLabel  value="Alumno: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{archivosMultimediaForm.estado}">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo300}"/>
                             <f:selectItem itemValue ="0" itemLabel="Pedro Vazques"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="Materia: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{archivosMultimediaForm.estado}">
+                        <p:outputLabel value="Materia: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{archivosMultimediaForm.estado}">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo100}"/>
                             <f:selectItem itemValue="0" itemLabel="Ciencias"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="Evaluación: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel value="Evaluación: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo100}"/>
                             <f:selectItem itemValue ="1" itemLabel="Examen Corto Matemáticas"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Nota: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Nota: " class=" Responsive"></p:outputLabel>
                         <p:spinner min="0.0" value="#{formatoPantallas.numeroDecimal}"></p:spinner>
-                        <p:outputLabel  value="Tipo de ingreso: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel  value="Tipo de ingreso: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue ="1" itemLabel="Automático"/>
                         </p:selectOneMenu>  
@@ -109,27 +109,27 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Alumno: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{archivosMultimediaForm.estado}">
+                        <p:outputLabel  value="Alumno: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{archivosMultimediaForm.estado}">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo300}"/>
                             <f:selectItem itemValue ="0" itemLabel="Pedro Vazques"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="Materia: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{archivosMultimediaForm.estado}">
+                        <p:outputLabel value="Materia: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{archivosMultimediaForm.estado}">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo100}"/>
                             <f:selectItem itemValue="0" itemLabel="Ciencias"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="Evaluación: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel value="Evaluación: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo100}"/>
                             <f:selectItem itemValue ="1" itemLabel="Examen Corto Matemáticas"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Nota: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Nota: " class=" Responsive"></p:outputLabel>
                         <p:spinner min="0.0" value="#{formatoPantallas.numeroDecimal}"></p:spinner>
-                        <p:outputLabel  value="Tipo de ingreso: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel  value="Tipo de ingreso: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue ="1" itemLabel="Automático"/>
                         </p:selectOneMenu>  
