--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/index.xhtml
@@ -59,26 +59,26 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Nombre del Curso:  " class=" Container20 Responsive"></p:outputLabel>
-                        <p:inputText  class=" Container20 Responsive" value="#{formatoPantallas.campo100}"/>
-                        <p:outputLabel  value="Capacidad: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:inputMask  mask="999" class=" Container20 Responsive" value="#{formatoPantallas.numero3}" />
-                        <p:outputLabel  value="Docente: " class="  Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="docente" class=" Container20 Responsive">
+                        <p:outputLabel  value="Nombre del Curso:  " class=" Responsive"></p:outputLabel>
+                        <p:inputText  class=" Responsive" value="#{formatoPantallas.campo100}"/>
+                        <p:outputLabel  value="Capacidad: " class=" Responsive"></p:outputLabel>
+                        <p:inputMask  mask="999" class=" Responsive" value="#{formatoPantallas.numero3}" />
+                        <p:outputLabel  value="Docente: " class="  Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="docente" class=" Responsive">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo300}"/>
                             <f:selectItem itemValue ="1" itemLabel="Juan Pérez"/>
                             <f:selectItem itemValue="0" itemLabel="Canario Martinez"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Seccion: " class="  Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive">
+                        <p:outputLabel  value="Seccion: " class="  Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue ="1" itemLabel="1° Grado"/>
                             <f:selectItem itemValue="0" itemLabel="2° Grado"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="Materia: " class="  Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive">
+                        <p:outputLabel value="Materia: " class="  Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo50}"/>
                             <f:selectItem itemValue ="1" itemLabel="Matemáticas"/>
                             <f:selectItem itemValue="0" itemLabel="Ciencias Naturales"/>
@@ -108,26 +108,26 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Nombre del Curso:  " class=" Container20 Responsive"></p:outputLabel>
-                        <p:inputText  class=" Container20 Responsive" value="#{formatoPantallas.campo300}"/>
-                        <p:outputLabel  value="Capacidad: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:inputMask  mask="999" class=" Container20 Responsive" value="#{formatoPantallas.numero3}" />
-                        <p:outputLabel  value="Docente: " class="  Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive">
+                        <p:outputLabel  value="Nombre del Curso:  " class=" Responsive"></p:outputLabel>
+                        <p:inputText  class=" Responsive" value="#{formatoPantallas.campo300}"/>
+                        <p:outputLabel  value="Capacidad: " class=" Responsive"></p:outputLabel>
+                        <p:inputMask  mask="999" class=" Responsive" value="#{formatoPantallas.numero3}" />
+                        <p:outputLabel  value="Docente: " class="  Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo300}"/>
                             <f:selectItem itemValue ="1" itemLabel="Juan Pérez"/>
                             <f:selectItem itemValue="0" itemLabel="Canario Martinez"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel value="Seccion: " class="  Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu class=" Container20 Responsive">
+                        <p:outputLabel value="Seccion: " class="  Responsive"></p:outputLabel>
+                        <p:selectOneMenu class=" Responsive">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue ="1" itemLabel="1° Grado"/>
                             <f:selectItem itemValue="0" itemLabel="2° Grado"/>
                         </p:selectOneMenu>
-                        <p:outputLabel  value="Materia: " class="  Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive">
+                        <p:outputLabel  value="Materia: " class="  Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo50}"/>
                             <f:selectItem itemValue ="1" itemLabel="Matemáticas"/>
                             <f:selectItem itemValue="0" itemLabel="Ciencias Naturales"/>
