--- a/SIENI/SIENI-web/src/main/webapp/view/buzonNotificaciones/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/buzonNotificaciones/index.xhtml
@@ -55,22 +55,22 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Título: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:inputText class=" Container20 Responsive" value="#{formatoPantallas.campo100}"></p:inputText>
-                        <p:outputLabel value="Estado: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Container20 Responsive" value="#{archivosMultimediaForm.estado}">
+                        <p:outputLabel  value="Título: " class=" Responsive"></p:outputLabel>
+                        <p:inputText class=" Responsive" value="#{formatoPantallas.campo100}"></p:inputText>
+                        <p:outputLabel value="Estado: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{archivosMultimediaForm.estado}">
                             <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue="0" itemLabel="No Disponible"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="Curso: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel value="Curso: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo100}"/>
                             <f:selectItem itemValue ="1" itemLabel="Video"/>
                             <f:selectItem itemValue ="2" itemLabel="Imagen"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">                    
-                        <p:outputLabel value="Consulta: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel value="Consulta: " class=" Responsive"></p:outputLabel>
                         <p:editor value="#{formatoPantallas.campo4000}" ></p:editor>
                         <p:outputLabel value="Tipo de Archivo:"></p:outputLabel>
                         <p:selectOneMenu>
