--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionMaterias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionMaterias/index.xhtml
@@ -55,22 +55,22 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="nombre" value="Nombre: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:inputText id="nombre" class=" Container20 Responsive" value="#{archivosMultimediaForm.nombre}"></p:inputText>
-                        <p:outputLabel for="estado" value="Estado: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="estado" class=" Container20 Responsive" value="#{archivosMultimediaForm.estado}">
+                        <p:outputLabel for="nombre" value="Nombre: " class=" Responsive"></p:outputLabel>
+                        <p:inputText id="nombre" class=" Responsive" value="#{archivosMultimediaForm.nombre}"></p:inputText>
+                        <p:outputLabel for="estado" value="Estado: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="estado" class=" Responsive" value="#{archivosMultimediaForm.estado}">
                             <f:selectItem itemValue ="1" itemLabel="Disponible"/>
                             <f:selectItem itemValue="0" itemLabel="No Disponible"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="coordinador" value="Coordinador: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="coordinador" class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel for="coordinador" value="Coordinador: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="coordinador" class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="Juan "/>
                             <f:selectItem itemValue ="1" itemLabel="Carlos"/>
                         </p:selectOneMenu>
-                        <p:outputLabel for="turno" value="Turno: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="turno" class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel for="turno" value="Turno: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="turno" class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="Matutino"/>
                             <f:selectItem itemValue ="1" itemLabel="Vespertino"/>
                         </p:selectOneMenu>   
@@ -99,22 +99,22 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="m_nombre" value="Nombre: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:inputText id="m_nombre" class=" Container20 Responsive" value="#{archivosMultimediaForm.nombre}"></p:inputText>
-                        <p:outputLabel for="m_estado" value="Estado: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="m_estado" class=" Container20 Responsive" value="#{archivosMultimediaForm.estado}">
+                        <p:outputLabel for="m_nombre" value="Nombre: " class=" Responsive"></p:outputLabel>
+                        <p:inputText id="m_nombre" class=" Responsive" value="#{archivosMultimediaForm.nombre}"></p:inputText>
+                        <p:outputLabel for="m_estado" value="Estado: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="m_estado" class=" Responsive" value="#{archivosMultimediaForm.estado}">
                             <f:selectItem itemValue ="1" itemLabel="Disponible"/>
                             <f:selectItem itemValue="0" itemLabel="No Disponible"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="m_coordinador" value="Coordinador: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="m_coordinador" class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel for="m_coordinador" value="Coordinador: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="m_coordinador" class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="Juan "/>
                             <f:selectItem itemValue ="1" itemLabel="Carlos"/>
                         </p:selectOneMenu>
-                        <p:outputLabel for="m_turno" value="Turno: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="m_turno" class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel for="m_turno" value="Turno: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="m_turno" class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="Matutino"/>
                             <f:selectItem itemValue ="1" itemLabel="Vespertino"/>
                         </p:selectOneMenu>   
