--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionNotas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionNotas/index.xhtml
@@ -52,27 +52,27 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="alumno" value="Alumno: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="alumno" class=" Container20 Responsive" value="#{archivosMultimediaForm.estado}">
+                        <p:outputLabel for="alumno" value="Alumno: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="alumno" class=" Responsive" value="#{archivosMultimediaForm.estado}">
                             <f:selectItem itemValue ="1" itemLabel="Juanita Andrea Lopez"/>
                             <f:selectItem itemValue ="0" itemLabel="Pedro Vazques"/>
                         </p:selectOneMenu>
-                        <p:outputLabel for="materia" value="Materia: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="materia" class=" Container20 Responsive" value="#{archivosMultimediaForm.estado}">
+                        <p:outputLabel for="materia" value="Materia: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="materia" class=" Responsive" value="#{archivosMultimediaForm.estado}">
                             <f:selectItem itemValue ="1" itemLabel="Matemáticas"/>
                             <f:selectItem itemValue="0" itemLabel="Ciencias"/>
                         </p:selectOneMenu>
-                        <p:outputLabel for="tipoEval" value="Evaluación: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="tipoEval" class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel for="tipoEval" value="Evaluación: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="tipoEval" class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="Examen Trimestral Matemáticas"/>
                             <f:selectItem itemValue ="1" itemLabel="Examen Corto Matemáticas"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="nota" value="Nota: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="nota" value="Nota: " class=" Responsive"></p:outputLabel>
                         <p:spinner id="nota" min="0.0" stepFactor="0.1" max="10.0"></p:spinner>
-                        <p:outputLabel for="tipoIngreso" value="Tipo de ingreso: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="tipoIngreso" class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel for="tipoIngreso" value="Tipo de ingreso: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="tipoIngreso" class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="Manual"/>
                             <f:selectItem itemValue ="1" itemLabel="Automático"/>
                         </p:selectOneMenu>  
@@ -101,27 +101,27 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="m_alumno" value="Alumno: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="m_alumno" class=" Container20 Responsive" value="#{archivosMultimediaForm.estado}">
+                        <p:outputLabel for="m_alumno" value="Alumno: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="m_alumno" class=" Responsive" value="#{archivosMultimediaForm.estado}">
                             <f:selectItem itemValue ="1" itemLabel="Juanita Andrea Lopez"/>
                             <f:selectItem itemValue ="0" itemLabel="Pedro Vazques"/>
                         </p:selectOneMenu>
-                        <p:outputLabel for="m_materia" value="Materia: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="m_materia" class=" Container20 Responsive" value="#{archivosMultimediaForm.estado}">
+                        <p:outputLabel for="m_materia" value="Materia: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="m_materia" class=" Responsive" value="#{archivosMultimediaForm.estado}">
                             <f:selectItem itemValue ="1" itemLabel="Matemáticas"/>
                             <f:selectItem itemValue="0" itemLabel="Ciencias"/>
                         </p:selectOneMenu>
-                        <p:outputLabel for="m_tipoEval" value="Evaluación: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="m_tipoEval" class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel for="m_tipoEval" value="Evaluación: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="m_tipoEval" class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="Examen Trimestral Matemáticas"/>
                             <f:selectItem itemValue ="1" itemLabel="Examen Corto Matemáticas"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="m_nota" value="Nota: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel for="m_nota" value="Nota: " class=" Responsive"></p:outputLabel>
                         <p:spinner id="m_nota" min="0.0" stepFactor="0.1" max="10.0"></p:spinner>
-                        <p:outputLabel for="m_tipoIngreso" value="Tipo de ingreso: " class=" Container20 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="m_tipoIngreso" class=" Container20 Responsive" value="#{archivosMultimediaForm.tipo}">
+                        <p:outputLabel for="m_tipoIngreso" value="Tipo de ingreso: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="m_tipoIngreso" class=" Responsive" value="#{archivosMultimediaForm.tipo}">
                             <f:selectItem itemValue ="0" itemLabel="Manual"/>
                             <f:selectItem itemValue ="1" itemLabel="Automático"/>
                         </p:selectOneMenu>  
