--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
@@ -72,29 +72,29 @@
                     </h:panelGrid>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Primer Nombre: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Primer Nombre: " class=" Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo50}"></p:inputText>
-                        <p:outputLabel  value="Segundo Nombre: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Segundo Nombre: " class=" Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo50}"></p:inputText>
-                        <p:outputLabel value="Tercer Nombre: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel value="Tercer Nombre: " class=" Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo50}"></p:inputText>
-                        <p:outputLabel  value="Primer Apellido: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Primer Apellido: " class=" Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo50}"></p:inputText>
-                        <p:outputLabel  value="Segundo Apellido: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Segundo Apellido: " class=" Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo50}"></p:inputText>
-                        <p:outputLabel  value="Tercer Apellido: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Tercer Apellido: " class=" Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo50}"></p:inputText>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Fecha de Nacimiento: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Fecha de Nacimiento: " class=" Responsive"></p:outputLabel>
                         <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
-                        <p:outputLabel value="Correo electrónico: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel value="Correo electrónico: " class=" Responsive"></p:outputLabel>
                         <p:inputText value="#{formatoPantallas.campo100}"></p:inputText>
-                        <p:outputLabel value="Teléfono: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel value="Teléfono: " class=" Responsive"></p:outputLabel>
                         <p:inputText value="#{formatoPantallas.telefono}"></p:inputText>
-                        <p:outputLabel value="Celular: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel value="Celular: " class=" Responsive"></p:outputLabel>
                         <p:inputText value="#{formatoPantallas.telefono}"></p:inputText>
-                        <p:outputLabel  value="Dirección: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Dirección: " class=" Responsive"></p:outputLabel>
                         <p:inputText value="#{formatoPantallas.campo200}"></p:inputText>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
@@ -128,29 +128,29 @@
                     </h:panelGrid>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Primer Nombre: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Primer Nombre: " class=" Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo50}"></p:inputText>
-                        <p:outputLabel  value="Segundo Nombre: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Segundo Nombre: " class=" Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo50}"></p:inputText>
-                        <p:outputLabel value="Tercer Nombre: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel value="Tercer Nombre: " class=" Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo50}"></p:inputText>
-                        <p:outputLabel  value="Primer Apellido: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Primer Apellido: " class=" Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo50}"></p:inputText>
-                        <p:outputLabel  value="Segundo Apellido: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Segundo Apellido: " class=" Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo50}"></p:inputText>
-                        <p:outputLabel  value="Tercer Apellido: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Tercer Apellido: " class=" Responsive"></p:outputLabel>
                         <p:inputText  value="#{formatoPantallas.campo50}"></p:inputText>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Fecha de Nacimiento: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Fecha de Nacimiento: " class=" Responsive"></p:outputLabel>
                         <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
-                        <p:outputLabel value="Correo electrónico: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel value="Correo electrónico: " class=" Responsive"></p:outputLabel>
                         <p:inputText value="#{formatoPantallas.campo100}"></p:inputText>
-                        <p:outputLabel value="Teléfono: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel value="Teléfono: " class=" Responsive"></p:outputLabel>
                         <p:inputText value="#{formatoPantallas.telefono}"></p:inputText>
-                        <p:outputLabel value="Celular: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel value="Celular: " class=" Responsive"></p:outputLabel>
                         <p:inputText value="#{formatoPantallas.telefono}"></p:inputText>
-                        <p:outputLabel  value="Dirección: " class=" Container20 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Dirección: " class=" Responsive"></p:outputLabel>
                         <p:inputText value="#{formatoPantallas.campo200}"></p:inputText>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
